1. Rewrote code to solve serious visibility issue on zoom change 2. Remapped various assets to enhance responsiveness 3. Optimized code and decreased size

--- a/style.css
+++ b/style.css
@@ -1,11 +1,74 @@
 *{
     margin: 0px;
-padding: 0px;
+    padding: 0px;
 }
-.firstpage svg {
-    width: 10vw;
+body{
+    background-color: gray;
 }
 
-.firstpage button svg{
-    width: 16px;
+.intro{
+    background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    height: 80vh;
+    position: relative;
+    z-index: 1;
+    object-fit: contain;
+}
+
+.backdrop{
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: black;
+    opacity: 0.5;
+    z-index: -1;
+}
+
+.intro div img{
+    width: 100px;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+    z-index: 1;
+}
+
+.hero{
+    position:relative;
+    z-index: 1;
+    color: white;
+    text-align: center;
+}
+
+.firstlad{
+    color: white;
+    background-color: black;
+    margin-top: 9px;
+}
+
+.secondlad{
+    color: white;
+    background-color: black;
+    margin-top: 9px;
+}
+.thirdlad{
+    color: white;
+    background-color: black;
+    margin-top: 9px;
+}
+
+.lastlad{
+    color: white;
+    background-color: black;
+    margin-top: 9px;
+}
+.faq{
+    color: white;
+    background-color: black;
+    margin-top: 9px;
 }
